--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
   "name": "projeto",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.4.1",
+    "notify-js-legacy": "^0.4.1",
+    "notify.js": "^0.0.3"
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/devanquinta/Rails-new.git",
+  "author": "Vander <vander2014quintanilha@gmail.com>",
+  "license": "MIT"
 }
