--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "projeto",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "notify-js-legacy": "^0.4.1",
-    "notify.js": "^0.0.3"
+    "notify.js": "^0.0.3",
+    "popper.js": "^1.15.0"
   },
   "version": "1.0.0",
   "main": "index.js",
